fix z-index

--- a/src/less/popup.less
+++ b/src/less/popup.less
@@ -17,7 +17,6 @@
   overflow-x: hidden;
   overflow-y: auto;
 
-  z-index: 1000;
 
   &.weui-popup-modal-visible {
     opacity: 1;
@@ -34,6 +33,7 @@
   height: 0;
   width: 100%;
   height: 100%;
+  z-index: 10;
 }
 
 .weui-popup-container {
